minor layout tweaks

--- a/page.conf
+++ b/page.conf
@@ -46,7 +46,7 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <meta name="generator" content="AsciiDoc {asciidoc-version}" />
 ifdef::index-only[]
 <meta name="description" content="The new NLE for Linux" />
-<meta name="keywords" content="NLE, video editing, GNU, Linux, professional, open source, OSS" />
+<meta name="keywords" content="NLE, professional video editing, linux video, open source, programming" />
 endif::index-only[]
 <link rel="stylesheet" href="/css/xhtml11.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
@@ -66,8 +66,8 @@ endif::latexmath[]
   <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <div id="wrapper">
- <iframe id="inavi" name="inavi" src="{l}/menu.html" onload="markPageInMenu()">
- <p>This should be the navigation menue, 
+ <iframe id="inavi" name="inavi" src="/menu.html" onload="markPageInMenu()">
+ <p>This frame should hold the <a href="/menu.html">main navigation menue</a>, 
     but unfortunately your browser can't display iFrames</p>
  </iframe>
 
