rename the main Asciidoc Stylesheet into asciidoc.css

--- a/page.conf
+++ b/page.conf
@@ -48,8 +48,7 @@ ifdef::index-only[]
 <meta name="description" content="The new NLE for Linux" />
 <meta name="keywords" content="NLE, professional video editing, linux video, open source, programming" />
 endif::index-only[]
-<link rel="stylesheet" href="/css/xhtml11.css" type="text/css" />
-{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
+<link rel="stylesheet" href="/css/asciidoc.css" type="text/css" />
 <link rel="stylesheet" href="/css/page.css" type="text/css" />
 <script type="text/javascript" src="{scriptsdir=.}/menu.js" defer="defer"></script>
 ifdef::asciimath[]
