cleanup and re-sync the page.conf and credits.conf

--- a/project/credits.conf
+++ b/project/credits.conf
@@ -1,3 +1,19 @@
+#
+# Lumiera Website Page
+# AsciiDoc configuation
+#
+# Special configuration for the 'credits' page
+#
+
+[attributes]
+l=http://localhost:8888
+ldoc=/documentation
+rfc=/documentation/devel/rfc
+img=/images
+imgd=/documentation/devel/images
+imgg=/media/img/design.gui
+scriptsdir=/js
+
 [specialwords]
 emphasizedwords=(?u)\\?\bAsciiDoc\b
 monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
@@ -9,37 +25,17 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset={encoding}" />
 <meta name="generator" content="AsciiDoc {asciidoc-version}" />
-ifdef::index-only[]
-<meta name="description" content="The new NLE for Linux" />
-<meta name="keywords" content="NLE, video editing, Linux" />
-endif::index-only[]
-<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}.css" type="text/css" />
-#{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
-<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-quirks.css" type="text/css" />
-<link rel="stylesheet" href="{stylesdir=.}/layout1.css" type="text/css" />
+<link rel="stylesheet" href="/css/asciidoc.css" type="text/css" />
+<link rel="stylesheet" href="/css/page.css" type="text/css" />
 <link rel="stylesheet" href="/project/credits.css" type="text/css" />
-ifdef::toc[]
-<script type="text/javascript">
-/*<![CDATA[*/
-window.onload = function()\{generateToc({toclevels=2})\}
-/*]]>*/
-</script>
-<script type="text/javascript" src="{scriptsdir=.}/toc.js"></script>
-endif::toc[]
-ifdef::asciimath[]
-<script type="text/javascript" src="{scriptsdir=.}/ASCIIMathML.js"></script>
-endif::asciimath[]
-ifdef::latexmath[]
-<script type="text/javascript" src="{scriptsdir=.}/LaTeXMathML.js"></script>
-endif::latexmath[]
 <script type="text/javascript" src="/js/scroller.js"></script>
 
 <title>{doctitle}</title>
 </head>
 <body onload="pageScroll()">
 <div id="layout-content">
-# Article, book header.
-ifndef::doctype-manpage[]
+
+<!-- visible page header -->
 <div id="header">
 <h1>{doctitle}</h1>
 <span id="author">{author}</span><br />
@@ -47,39 +43,13 @@ ifndef::doctype-manpage[]
 {authored}<span id="revision">version {revision}{date?,}</span>
 {authored}{date}
 </div>
-ifdef::toc[]
-<div id="toc">
-  <div id="toctitle">Table of Contents</div>
-  <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
-</div>
-endif::toc[]
-endif::doctype-manpage[]
-# Man page header.
-ifdef::doctype-manpage[]
-<div id="header">
-<h1>
-{doctitle} Manual Page
-</h1>
-ifdef::toc[]
-<div id="toc">
-  <div id="toctitle">Table of Contents</div>
-  <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
-</div>
-endif::toc[]
-<h2>NAME</h2>
-<div class="sectionbody">
-<p>{manname} -
-   {manpurpose}
-</p>
-</div>
-</div>
-endif::doctype-manpage[]
+
 
 [footer]
 <div id="footer">
 <div id="footer-text">
-Last updated {localdate} {localtime}<br />
-AsciiDoc version {revision}
+Version {revision}<br />
+Last updated {localdate} {localtime}
 </div>
 ifdef::badges[]
 <div id="footer-badges">
@@ -90,19 +60,24 @@ endif::textonly[]
 ifndef::textonly[]
 <a href="http://validator.w3.org/check?uri=referer">
   <img style="border:none; width:88px; height:31px;"
-       src="http://www.w3.org/Icons/valid-xhtml11-blue"
+       src="http://www.w3.org/Icons/valid-xhtml11"
        alt="Valid XHTML 1.1!" />
 </a>
-<a href="http://jigsaw.w3.org/css-validator/">
-    <img style="border:0;width:88px;height:31px"
-        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-        alt="Valid CSS!" />
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+  <img style="border:none; width:88px; height:31px;"
+       src="http://jigsaw.w3.org/css-validator/images/vcss" 
+       alt="Valid CSS!" />
 </a>
+<a href="http://www.mozilla.org/products/firefox/">
+  <img style="border:none; width:110px; height:32px;"
+       src="http://www.spreadfirefox.com/community/images/affiliates/Buttons/110x32/safer.gif"
+       alt="Get Firefox!" />
+</a> 
 endif::textonly[]
 </div>
 endif::badges[]
 </div>
 </div>
+</div>
 </body>
 </html>
-
