adjust presentaton of asciidoc header metadata
- removed the 'version' line and put the date instead
- changed from using the Git-Date to using the date
  hard wired in the document header

--- a/page.conf
+++ b/page.conf
@@ -71,8 +71,7 @@ endif::index-only[]
 <h1>{doctitle}</h1>
 <span id="author">{author}</span><br />
 <span id="email"><tt>&lt;<a href="mailto:{email}">{email}</a>&gt;</tt></span><br />
-{authored}<span id="revision">version {revision}{date?,}</span>
-{authored}{date}
+{authored}<span id="page_date">&mdash; {date} &mdash;</span>
 </div>
 
 
