--- a/page.conf
+++ b/page.conf
@@ -78,34 +78,8 @@ endif::index-only[]
 [footer]
 <div id="footer">
 <div id="footer-text">
-Version {revision}<br />
-Last updated {localdate} {localtime}
+include::footer.html[]
 </div>
-ifdef::badges[]
-<div id="footer-badges">
-ifdef::textonly[]
-Valid <a href="http://validator.w3.org/check?uri=referer">XHTML</a>
-and <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
-endif::textonly[]
-ifndef::textonly[]
-<a href="http://validator.w3.org/check?uri=referer">
-  <img style="border:none; width:88px; height:31px;"
-       src="http://www.w3.org/Icons/valid-xhtml11"
-       alt="Valid XHTML 1.1!" />
-</a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer">
-  <img style="border:none; width:88px; height:31px;"
-       src="http://jigsaw.w3.org/css-validator/images/vcss" 
-       alt="Valid CSS!" />
-</a>
-<a href="http://www.mozilla.org/products/firefox/">
-  <img style="border:none; width:110px; height:32px;"
-       src="http://www.spreadfirefox.com/community/images/affiliates/Buttons/110x32/safer.gif"
-       alt="Get Firefox!" />
-</a> 
-endif::textonly[]
-</div>
-endif::badges[]
 </div>
 </div>
 </div>
