rename footer HTML fragment
-- because HTML pages are mostly generated,
thus it's common to rm all *html

--- a/page.conf
+++ b/page.conf
@@ -78,7 +78,7 @@ endif::index-only[]
 [footer]
 <div id="footer">
 <div id="footer-text">
-include::footer.html[]
+include::footer.htmlf[]
 </div>
 </div>
 </div>
