--- a/page.conf
+++ b/page.conf
@@ -71,7 +71,7 @@ endif::index-only[]
 <h1>{doctitle}</h1>
 <span id="author">{author}</span><br />
 <span id="email"><tt>&lt;<a href="mailto:{email}">{email}</a>&gt;</tt></span><br />
-{authored}<span id="page_date">&mdash; {date} &mdash;</span>
+<span id="page_date">&mdash; {date} &mdash;</span>
 </div>
 
 
