clean-up: link to 2013 summer news, remove obsolete information

--- a/page.conf
+++ b/page.conf
@@ -28,6 +28,7 @@
 l=http://{localWebHostname=www.lumiera.org}
 ldoc=/documentation
 rfc=/documentation/devel/rfc
+doxy=/doxy
 img=/images
 imgd=/documentation/devel/images
 imgg=/media/img/design.gui
