Website/Asciidoc: enable TOC generation and footnotes
this resolves a long standing issue; the functionality
was provided by Asciidoc out of the box, relying on the
standard page configuration. Creating our own page layout
unintentionally broke these functions

TOC generation can now optionally be enabled by setting the
page attirbute ":toc:" (in the page header). Footnotes are
available through the "footnote:[text]" macro. Our CSS
is adjusted accordingly to display the TOC in the sidebar
and the Footnotes above the footer

--- a/page.conf
+++ b/page.conf
@@ -32,7 +32,6 @@ doxy=/doxy
 img=/images
 imgd=/documentation/devel/images
 imgg=/media/img/design.gui
-scriptsdir=/js
 
 [specialwords]
 emphasizedwords=(?u)\\?\bAsciiDoc\b
@@ -51,7 +50,13 @@ ifdef::index-only[]
 endif::index-only[]
 <link rel="stylesheet" href="/css/asciidoc.css" type="text/css" />
 <link rel="stylesheet" href="/css/page.css" type="text/css" />
-<script type="text/javascript" src="{scriptsdir=.}/menu.js" defer="defer"></script>
+<script type="text/javascript" src="/js/menu.js" defer="defer"></script>
+<script type="text/javascript" src="/js/asciidoc.js"></script>
+<script type="text/javascript">
+/*<![CDATA[*/
+asciidoc.install({toc?{toclevels}});
+/*]]>*/
+</script>
 <title>{doctitle}</title>
 </head>
 <body>
@@ -70,13 +75,28 @@ endif::index-only[]
 <!-- visible page header -->
 <div id="header">
 <h1>{doctitle}</h1>
+
+ifdef::toc[]
+<div class="sidebarblock toc">
+  <div class="content">
+    <div class="paragraph" id="toc">
+      <div class="title" id="toctitle">contents</div>
+      <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
+    </div>
+  </div>
+</div>
+endif::toc[]
+
 <span id="author">{author}</span><br />
 <span id="email"><tt>&lt;<a href="mailto:{email}">{email}</a>&gt;</tt></span><br />
 <span id="page_date">&mdash; {date} &mdash;</span>
 </div>
+<div id="content"><!-- asciidoc generated content -->
 
 
 [footer]
+</div><!-- end asciidoc content -->
+{disable-javascript%<div id="footnotes"><hr /></div>}
 <div id="footer">
 <div id="footer-text">
 include::footer.htmlf[]
