Menu: fix the problem with the limited IFrame height
...which caused a scrollbar to appear quite soon, when
too much sub nodes were opened. The solution is to use
a JavaScript to adjust the height of the enclosing IFrame
dynamically, based on the height of the top level document.

HTML/CSS was never able to solve that problem of dynamic
vertical space

--- a/page.conf
+++ b/page.conf
@@ -65,7 +65,8 @@ asciidoc.install({toc?{toclevels}});
   <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <div id="wrapper">
- <iframe id="inavi" name="inavi" src="/menu.html" onload="markPageInMenu()">
+ <!-- navigation tree menu in separate page -->
+ <iframe id="inavi" name="inavi" src="/menu.html" onload="markPageInMenu(this)">
  <p>This frame should hold the <a href="/menu.html">main navigation menue</a>, 
     but unfortunately your browser can't display iFrames</p>
  </iframe>
