Website: some minor tweaks and polisihng to the page layout.
especially the footer is now a real footer, moved below the
content area, spanning the whole page width. And we have a
Lumiera logo now in the Banner

--- a/page.conf
+++ b/page.conf
@@ -2,8 +2,6 @@
 # Lumiera Website Page
 # AsciiDoc configuation
 #
-# Three division table based layout (layout1).
-#  
 # +-------------------------------------------------------+
 # |          #layout-banner                               |
 # +-------------------------------------------------------+
@@ -11,11 +9,15 @@
 # |+--------------+--------------------------------------+|
 # ||              |                                      ||
 # ||              |                                      ||
-# || #menu        |          #layout-content             ||
+# || iframe#inavi |          #layout-content             ||
 # ||              |                                      ||
-# ||              +-------------------------------------+||
-# ||              |          #footer                     ||
+# ||              |                                      ||
+# ||              +--------------------------------------+|
+# ||              |          #footnotes                  ||
 # |+--------------+--------------------------------------+|
+# +-------------------------------------------------------+
+# +-------------------------------------------------------+
+# |          #footer                                      |
 # +-------------------------------------------------------+
 # 
 #   #layout banner stays a top
@@ -98,11 +100,11 @@ endif::toc[]
 [footer]
 </div><!-- end asciidoc content -->
 {disable-javascript%<div id="footnotes"><hr /></div>}
+</div>
+</div>
 <div id="footer">
 <div id="footer-text">
 include::footer.htmlf[]
-</div>
-</div>
 </div>
 </div>
 </body>
