--- a/project/credits.conf
+++ b/project/credits.conf
@@ -6,13 +6,13 @@
 #
 
 [attributes]
-l=http://localhost:8888
+l=http://{localWebHostname=www.lumiera.org}
 ldoc=/documentation
 rfc=/documentation/devel/rfc
+doxy=/doxy
 img=/images
 imgd=/documentation/devel/images
 imgg=/media/img/design.gui
-scriptsdir=/js
 
 [specialwords]
 emphasizedwords=(?u)\\?\bAsciiDoc\b
@@ -29,6 +29,7 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <link rel="stylesheet" href="/css/page.css" type="text/css" />
 <link rel="stylesheet" href="/project/credits.css" type="text/css" />
 <script type="text/javascript" src="/js/scroller.js"></script>
+<script type="text/javascript" src="/js/asciidoc.js"></script>
 
 <title>{doctitle}</title>
 </head>
@@ -40,8 +41,7 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <h1>{doctitle}</h1>
 <span id="author">{author}</span><br />
 <span id="email"><tt>&lt;<a href="mailto:{email}">{email}</a>&gt;</tt></span><br />
-{authored}<span id="revision">version {revision}{date?,}</span>
-{authored}{date}
+<span id="page_date">&mdash; {date} &mdash;</span>
 </div>
 
 
@@ -51,31 +51,6 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 Version {revision}<br />
 Last updated {localdate} {localtime}
 </div>
-ifdef::badges[]
-<div id="footer-badges">
-ifdef::textonly[]
-Valid <a href="http://validator.w3.org/check?uri=referer">XHTML</a>
-and <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
-endif::textonly[]
-ifndef::textonly[]
-<a href="http://validator.w3.org/check?uri=referer">
-  <img style="border:none; width:88px; height:31px;"
-       src="http://www.w3.org/Icons/valid-xhtml11"
-       alt="Valid XHTML 1.1!" />
-</a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer">
-  <img style="border:none; width:88px; height:31px;"
-       src="http://jigsaw.w3.org/css-validator/images/vcss" 
-       alt="Valid CSS!" />
-</a>
-<a href="http://www.mozilla.org/products/firefox/">
-  <img style="border:none; width:110px; height:32px;"
-       src="http://www.spreadfirefox.com/community/images/affiliates/Buttons/110x32/safer.gif"
-       alt="Get Firefox!" />
-</a> 
-endif::textonly[]
-</div>
-endif::badges[]
 </div>
 </div>
 </div>
